// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test Component render Button component rendering 1`] = `
<button
  onClick={[Function]}
>
  Click 
  Me
</button>
`;

exports[`Unit Test Component render Button component rendering 2`] = `
<button
  onClick={[Function]}
>
  Click 
  Lan Anh
</button>
`;
